[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/SideMenu/ObjectsTileSelectorButton.gd" type="Script" id=1]
[ext_resource path="res://TileSets/Objects.tres" type="TileSet" id=2]
[ext_resource path="res://Scenes/SideMenu/ObjectsTileSelectorPopup.tscn" type="PackedScene" id=3]

[node name="ObjectsTileSelectorButton" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
format = 1
tile_data = PoolIntArray( 0, 0, 0 )

[node name="ObjectsTileSelectorPopup" parent="." instance=ExtResource( 3 )]
visible = false

[connection signal="tile_selected" from="ObjectsTileSelectorPopup" to="." method="_on_ObjectsTileSelectorPopup_tile_selected"]
